# rolling-cost-cap

./: .gitignore  README.md  bench.py  pyproject.toml
.github/workflows/: ci.yml
src/rolling_cost_cap/: __init__.py
tests/: test_cap.py
