[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rolling-cost-cap"
version = "0.1.0"
description = "Runaway-cost circuit breaker for LLM and metered API calls: rolling-median anomaly detection, absolute per-call ceiling, monthly budget"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Corey Stevens" }]
keywords = [
  "llm",
  "cost-control",
  "budget",
  "circuit-breaker",
  "anthropic",
  "openai",
  "observability",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coreystevensdev/rolling-cost-cap"
Issues = "https://github.com/coreystevensdev/rolling-cost-cap/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/rolling_cost_cap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
